# mctrust

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/: basic.rs  optimization.rs  tic_tac_toe.rs  toml_config.rs
src/: adversarial_tests.rs  config.rs  environment.rs  lib.rs  node.rs  reward.rs
src/bandit/: config.rs  mod.rs  node.rs  tests.rs
src/game_search/: mod.rs  phases.rs  tests.rs
